--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 
 .dark-mode {
   --bg-color: #121212;
-  --text-color: #ffffff;
+  --text-color: #f6f4f4;
   --header-bg: #1e1e1e;
   --link-color: #61dafb;
   --form-bg: #1e1e1e;
